opam-version: "2.0"
synopsis: "Melange TEA project"
description: "Minimal Melange TEA project"
maintainer: ["<your_name>"]
authors: ["<your_name>"]
license: "MIT"
homepage: "https://github.com/your/project"
bug-reports: "https://github.com/your/project/issues"
depends: [
  "ocaml"
  "reason" {>= "3.10.0"}
  "dune" {>= "3.9"}
  "melange" {>= "3.0.0"}
  "melange-webapi" {= "0.21.0"}
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
  "melange-tea" {dev}
]
dev-repo: "git+https://github.com/your/project.git"
pin-depends: [
  [ "melange-tea.dev" "git+https://gitlab.com/technostructures/lib/melange-tea.git" ]
]
